# ChangeLog for dev-ruby/uuidtools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uuidtools/ChangeLog,v 1.38 2014/08/14 14:11:15 mrueg Exp $

*uuidtools-2.1.5 (14 Aug 2014)

  14 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +uuidtools-2.1.5.ebuild:
  Version bump.

  18 Jul 2014; Manuel Rüger <mrueg@gentoo.org> uuidtools-2.1.3.ebuild,
  uuidtools-2.1.4-r1.ebuild, uuidtools-2.1.4-r3.ebuild:
  Add missing doc dependency on dev-ruby/yard

  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> -uuidtools-2.1.4.ebuild,
  -uuidtools-2.1.4-r2.ebuild:
  Cleanup.

  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> uuidtools-2.1.4-r1.ebuild:
  Use default gem SRC_URI since rubyforge is going away, bug 512132.

*uuidtools-2.1.4-r3 (02 Jun 2014)

  02 Jun 2014; Hans de Graaff <graaff@gentoo.org> +uuidtools-2.1.4-r3.ebuild:
  Use default gem SRC_URI since rubyforge is going away, bug 512132.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> uuidtools-2.1.3.ebuild:
  Remove ree18 and ruby18 target.

*uuidtools-2.1.4-r2 (03 Apr 2014)

  03 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +uuidtools-2.1.4-r2.ebuild,
  uuidtools-2.1.4-r1.ebuild, uuidtools-2.1.4.ebuild:
  Add ruby21. Drop ruby18.

*uuidtools-2.1.4-r1 (30 Oct 2013)

  30 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +uuidtools-2.1.4-r1.ebuild:
  Add ruby20 target.

*uuidtools-2.1.4 (22 Jul 2013)

  22 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +uuidtools-2.1.4.ebuild,
  -uuidtools-2.1.1-r1.ebuild:
  Version bump, Cleanup

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> uuidtools-2.1.3.ebuild:
  x86 stable wrt bug #437364

  12 Oct 2012; Agostino Sarubbo <ago@gentoo.org> uuidtools-2.1.3.ebuild:
  Stable for amd64, wrt bug #437364

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> -uuidtools-2.1.2.ebuild:
  Cleanup.

*uuidtools-2.1.3 (20 Jul 2012)

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> +uuidtools-2.1.3.ebuild:
  Version bump.
