@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX uuidtools-2.1.2-macaddress.patch 2866 SHA256 9a714f761fe520f81ec786fd9bdcf2291f4f279c33242f06ae8e4a6beadec829 SHA512 80d3bb8a3baeca44e58667273b683805cf1d6fa35153227fdac18bcf28ca1b14f37de2ff88779bdef84fbbe541b6fc535b1af0f1bb5db71743e52f43dbfe5cf5 WHIRLPOOL 18999646594d1738941c4bde810a23554ea0134246335e790d8774d39d9f515a5acfb4ba3370c7cac616a9969a2621eb3f6971ddd8e641942a408b7d65685a06
 DIST uuidtools-2.1.3.tgz 20229 SHA256 0e05a22276f813376eafbbb93bbd395c168750fa186d3ad683d9eb9d6bb39568 SHA512 553145e942e8fa33286728a22df99228057ab6259d745cfb1a4e623f440155bbd989cd9c67875a4a563af69156d7c71cd729d5119e2e164163617afd5ecff2ba WHIRLPOOL f9733546d35371eed7c6aac4b06b6d9cba3acfefa644835d1453462655b9cd64e8131eaaa87ed41cd47dc3958579473d2f2285dbdeb3ff2f22cbd445da91580b
 DIST uuidtools-2.1.4.gem 25600 SHA256 439b6432ed2199490d133954e9c8bab273355d7653b9d2fd70259472a7850bf0 SHA512 e813cfcafd61493e4050b82d30c52aa7e3d0b1dde332181da49d6180f880604eff32ee656cfb6c5b92fa7c79dcc2b1c983690b8f35b19604dec393fa3da5ae09 WHIRLPOOL 3157432e97dd1d5adf42a433b77c4d86c9405771c12443f0910bd95300121c8321044dcdd3bbcab4b89fbf74d7fa316a23f531131431cf9cf7f801c0c5f4bd0c
@@ -5,6 +8,13 @@ DIST uuidtools-2.1.5.gem 25600 SHA256 af6c85f2fca731cbf45ebc55b96bf5c94d0d46663d
 EBUILD uuidtools-2.1.3.ebuild 721 SHA256 322a810127c4a8e6ba3a3db8fd0db801112d56c6116052db7fb7ccbfb7506283 SHA512 70c0d6dc6ff11e2f6c1f396cbdf4c78c197b96a5c54eeeb1e5fb73c5212be7da49335abf0ce2cb24110eb73c2f234b01194e07a4a2a59b8cb53dd6f4ee702961 WHIRLPOOL 7dc40cf1928ebcfbad0670c6f32d8e6806619df01f4e82da4f0aa436b0310e05fd434e6bf48c18417904a05ca2edea43e9fb30c68ddb388ba0937c13924cd6cd
 EBUILD uuidtools-2.1.4-r1.ebuild 642 SHA256 bc4be03ed2793a2d09092ee11a37bbdb94dbfcf5b0289369d0d3f8a804ab304a SHA512 b321e7e87ff1b267f448a179fee07d5cbebcef72881797816777dc8dee8509d20bc10268dfa413d9578863783bc98af11a445b0030c951f934d79de46d9c7e21 WHIRLPOOL c98f59b020141875bcdd5f15163d9864dabaf8f5f73832fff58bd20cdc7beb7324f90f8dc0c9d7cc03e7117458472b69ecd35e3849b6d83c70b1b07014885ea6
 EBUILD uuidtools-2.1.4-r3.ebuild 649 SHA256 5436985131eac70d6841df0b0060585eb3c82fcc3e55b742e6aa93422d70df29 SHA512 1db5c3cae53df62d3b7584ac1f8d7464cab0be850d24acb0e033b9f22d7003cfd2f4350ea2844bad26aed5e931907778b7e3f5bb946efef84bfe7d9b0103928b WHIRLPOOL 806bcd7b8bcb6d91ae3fc95b4f69e62e5a0b709990fe777ae38e1b55474f3b8658f5627f56493dce6554c293bfa701047a766149ed5edbb5671032b69534922a
-EBUILD uuidtools-2.1.5.ebuild 646 SHA256 9652b77f3b83b9aecc91623db2e319bc641b4a1e05884f12ab0edddd36eaf811 SHA512 42a8cced707cf8bc853a044339d769105167d927f9ce16403b83009e37d1436aae32a251eb0a50a25d20e45ee641df780cc656a6ab03a7be31a5561866421b6f WHIRLPOOL 7456be41806b788d08e4384abf7fb422b2d32215b3ee2f3f0317950235e4a78ca282cf685e7dac775697f175a5d6e86ec85603a7d684ce53441ef306c6be5bb8
-MISC ChangeLog 5776 SHA256 7b4631408093cb47472cd024877a4c6145dc8a98cfc4dea0fb4f2a2893f6c9c9 SHA512 8752d5be3ee931c4ce2f75979700fc01f4cba6588a49b64164da5f45f2bf9c4faf299a9f6b654638662ef5215f83af7e6383d75a7431bef9771a238cd2b59fd9 WHIRLPOOL 1d5f1d01b71ab057e50fa1cb55c5380473eb7605fa25dfcdcf68c4184afa85e0306a5fbafa1899352ac94f4fd39c9af01feff50090a606fc587e0f68efecede6
+EBUILD uuidtools-2.1.5.ebuild 1182 SHA256 2fa83cf4b1bb7c5307f289d734eaf1ddb2d05730fb4ab77c675bc40c4f1801cb SHA512 cb53f8dfc77ff07156ad3c30f27244c839e788ec61f8f2b5a3aefd334103d2fd58dfc8b5c897a370fea15edf5c94022a17aab85ff232ed6fe21fab16588ad585 WHIRLPOOL b92d45190c599e50b0f7a8f90f2142a1b3dd704426526bb605f519550aef995f261ac096904f60b04d47ff0563a3b27cb337ac9bcf1850d5f7732f237ee4927c
+MISC ChangeLog 5905 SHA256 de7c9788fc32339b976f9fdc979ae63691f025f9f5645f6494c385c6c7e4bc1e SHA512 f60e0b888f66f600287a60bd218c42c79e571921b2f91e9cac52a3c01c12b43072282fd4b4a522c8463b7f15b23fc9c7bb2dc65cb1797a2a8613d8f3da061f76 WHIRLPOOL a2c4c2a408685bfda65890a88fb6ab25283962b4fa7a89556e8ddf80534a5d64b2d7239162893fdc9f3c66116609e6f04d2a3a409d0724cf6858493308e54501
 MISC metadata.xml 426 SHA256 bd41be55438982d958d6ae219992a997f634885dc5f6a72854bcc533c317dc96 SHA512 2d86b5938d9ef4d890502bfea864cfcf780276e675263cb9ffa765840926c214797b811ccb0d6418e2aedcbe5e1f239a2e0dfa05dfe05e7c1bba2d9aa064d614 WHIRLPOOL 84b7715c50af6e02e03ea3c5743ad8499c3607c25d25254c174b61dacdb9ff8f4e2a7dd5ff06ad69fea767b4b66a72f31d702fdf0f5e80243492d7a5fcd773cb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP0uh0ACgkQiIP6VqMIqNfsYwEAkQUBcDM/PhClIyb7NB/UEQPD
+mk1T8g968U1/ucHRhDMA/ia0i0XCvWNCteGKzU8uXOudVWyb0kQnvnMcqtv7TkYz
+=/SEo
+-----END PGP SIGNATURE-----
