@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uuidtools/uuidtools-2.1.5.ebuild,v 1.1 2014/08/14 14:11:15 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uuidtools/uuidtools-2.1.5.ebuild,v 1.2 2014/08/20 15:09:10 graaff Exp $
 
 EAPI=5
 
@@ -23,3 +23,14 @@ KEYWORDS="~amd64 ~x86 ~x86-macos"
 IUSE="doc"
 
 ruby_add_bdepend "doc? ( dev-ruby/yard )"
+
+all_ruby_prepare() {
+	# Avoid specs that require an actual network interface to get a MAC
+	# address. We can't assume that a network interface is available.
+	sed -e '/when obtaining a MAC address/,/^end/ s:^:#:' \
+		-i spec/uuidtools/mac_address_spec.rb || die
+	sed -e '/should correctly generate timestamp variant UUIDs/,/^  end/ s:^:#:' \
+		-i spec/uuidtools/uuid_creation_spec.rb || die
+	sed -e '/should not treat a timestamp version UUID as a random node UUID/,/^  end/ s:^:#:' \
+		-i spec/uuidtools/uuid_parsing_spec.rb || die
+}
